<resources>
    <string name="app_name" translatable="false">DoubletappApp</string>
    <string name="action_settings">Settings</string>

    <string name="title_add_habit">Habit</string>
    <string name="title_habits">My habits</string>
    <string name="title_about">About app</string>

    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>

    <string name="goal">Goal</string>
    <string name="period">Period</string>
    <string name="habit_desc">Habit description</string>
    <string name="enter_name_hint">Please enter a name</string>
    <string name="enter_desc_hint">Please enter a description</string>

    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="neutral">Neutral</string>

    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

    <string name="name">Name</string>
    <string name="color_results" translatable="false">HSL: %1$f %2$.3f %3$.3f\nRGB: %4$d %5$d %6$d</string>
    <string name="cur_color">Current color</string>
    <string name="every">Every</string>
    <string name="days">days</string>
    <string name="times">times</string>
    <string name="every_x_days">Every %1$s days</string>
    <string name="did_last_time">Last time: %1$s</string>
    <string name="never">never</string>
    <string name="goal_n_times">Did %1$s, goal: %2$s</string>
    <string name="n_times">%1$d times</string>
    <string name="mark_done">Did it</string>

    <string name="developed_by">Developed by fitsuli</string>
    <string name="link_open_error">Can\'t open the link</string>
    <string name="no_changes_made">No changes were made</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="update_list">Update list</string>

    <string name="offline_hint">You are offline</string>
    <string name="network_error">Network error occurred</string>
</resources>