<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingHorizontal="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="32dp">

    <ImageView
        android:id="@+id/arrow_up_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_round_keyboard_arrow_up_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/filters_header"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/filters"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_up_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/arrow_up_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filters_header"
        app:startIconDrawable="@drawable/ic_round_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:inputType="textCapSentences|textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sort_by_name_text"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="8dp"
        android:text="@string/sort_by_name"
        app:layout_constraintEnd_toStartOf="@id/by_ascending_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout" />

    <ImageButton
        android:id="@+id/by_ascending_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_round_keyboard_arrow_up_24"
        app:layout_constraintBottom_toBottomOf="@id/sort_by_name_text"
        app:layout_constraintEnd_toStartOf="@id/by_default_icon"
        app:layout_constraintTop_toTopOf="@id/sort_by_name_text"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/by_default_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_round_search_off_24"
        app:layout_constraintBottom_toBottomOf="@id/sort_by_name_text"
        app:layout_constraintEnd_toStartOf="@id/by_descending_icon"
        app:layout_constraintTop_toTopOf="@id/sort_by_name_text"
        app:tint="?attr/colorOnSurface" />

    <ImageButton
        android:id="@+id/by_descending_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_round_keyboard_arrow_down_24"
        app:layout_constraintBottom_toBottomOf="@id/sort_by_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sort_by_name_text"
        app:tint="?attr/colorOnSurface" />

</androidx.constraintlayout.widget.ConstraintLayout>